# compression

./: .gitignore  README.md  data.zip.dvc  dvc.yaml  params.yaml  pyproject.toml
src/compression/: __init__.py  __main__.py  compress.py  data.py  train.py
src/compression/core/: data.py  model.py
