[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
dependencies = [
    "dvc>=3.58.0",
]
description = "Train and compress a LeNet."
name = "compression"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[project.scripts]
compression = "compression:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
