[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
dependencies = [
  "dvc >= 3, < 4",
  "numpy >= 2, < 3",
  "pillow>=11.0.0",
  "scikit-learn >= 1, < 2",
  "tensorflow >= 2, < 3",
  "tqdm>=4.67.1",
]
description = "Train and compress a LeNet."
name = "compression"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy >= 1, < 2",
  "ruff >= 0.8, < 1",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["D1", "D203", "D213"]
preview = true
select = ["A", "B", "C", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["X", "X_*", "Y", "Y_*"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
